[package]
name = "provable_vm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
ark-bls12-381 = "0.4"
ark-ff = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-snark = "0.4"
bincode = "1.3.3"
eyre = "0.6.12"
hex = "0.4.3"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
